--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "P'unk Avenue LLC",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "~0.5.x",
+    "apostrophe": "matthaias/apostrophe",
     "apostrophe-pages": "~0.5.x",
     "apostrophe-schemas": "~0.5.x",
     "appy": "~0.5.0",
